test_regress/t/t_castdyn_run_bad.out
[0] %Error: t_castdyn_run_bad.v:32: Assertion failed in top.t: 'assert' failed.
%Error: t/t_castdyn_run_bad.v:32: Verilog $stop
Aborting...
